--- a/C/dynamic list/output/ver practice+gpt+retouch.dSYM/Contents/Info.plist
+++ b/C/dynamic list/output/ver practice+gpt+retouch.dSYM/Contents/Info.plist
@@ -5,7 +5,7 @@
 		<key>CFBundleDevelopmentRegion</key>
 		<string>English</string>
 		<key>CFBundleIdentifier</key>
-		<string>com.apple.xcode.dsym.example1</string>
+		<string>com.apple.xcode.dsym.ver practice+gpt+retouch</string>
 		<key>CFBundleInfoDictionaryVersion</key>
 		<string>6.0</string>
 		<key>CFBundlePackageType</key>
